# java-preloader-reloadeder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: adoptjdk.rs  checksum_verifier.rs  command.rs  config.rs  content_disposition_parser.rs  context_id.rs  error.rs  foojay.rs  http_client.rs  http_failure.rs  java_home_management.rs  java_version.rs  jdk_manager.rs  main.rs  progress.rs  release_file_parser.rs  reqwest_failure.rs  string.rs  tui.rs  util.rs
src/api/: adoptium.rs  def.rs  http_failure.rs  mod.rs
src/command/: current.rs  debug.rs  get_context_id.rs  java_home.rs  list_distributions.rs  list_installed.rs  list_versions.rs  remove_jdk.rs  set_default.rs  set_distribution.rs  set_distributions.rs  update.rs  use_jdk.rs
src/java_version/: key.rs
wrapper/: _java-preloader.sh
