[package]
name = "jpre"
description = "A JDK management tool"
keywords = ["java", "jdk"]
categories = ["command-line-utilities", "development-tools::build-utils"]
version = "0.3.1-dev"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/java-preloader-reloadeder"
edition = "2021"

[dependencies]
error-stack = "0.5.0"
digest = "0.10.7"
sha2 = "0.10.8"
directories = "5.0.1"
tracing = "0.1.41"
toml = "0.8.19"
itertools = "0.14.0"
thiserror = "2.0.9"
console = "0.15.10"
indicatif = "0.17.9"
hex = "0.4.3"
tempfile = "3.15.0"
tar = "0.4.43"
flate2 = "1.0.35"
zip = "2.2.2"
enum_dispatch = "0.3.13"

[dependencies.url]
version = "2.5.4"
features = ["serde"]

[dependencies.ureq]
version = "2.12.1"
features = ["json", "proxy-from-env"]

[dependencies.owo-colors]
version = "4.1.0"
features = ["supports-colors"]

[dependencies.derive_more]
version = "1.0.0"
features = ["full"]

[dependencies.clap]
version = "4.5.23"
features = ["derive"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

# Optimize dependencies in dev
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
