[package]
name = "jpre"
description = "A JDK management tool"
keywords = ["java", "jdk"]
categories = ["command-line-utilities", "development-tools::build-utils"]
version = "0.3.1-dev"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/java-preloader-reloadeder"
edition = "2021"

[dependencies]
error-stack = "0.5.0"
digest = "0.10.7"
sha2 = "0.10.8"
directories = "6.0.0"
tracing = "0.1.41"
toml = "0.8.20"
toml_edit = "0.22.24"
itertools = "0.14.0"
thiserror = "2.0.12"
console = "0.15.11"
indicatif = "0.17.11"
hex = "0.4.3"
tempfile = "3.19.1"
tar = "0.4.44"
flate2 = "1.1.0"
zip = "2.5.0"
enum_dispatch = "0.3.13"

[dependencies.url]
version = "2.5.4"
features = ["serde"]

[dependencies.ureq]
version = "3.0.10"
features = ["json"]

[dependencies.owo-colors]
version = "4.2.0"
features = ["supports-colors"]

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]

[dependencies.clap]
version = "4.5.34"
features = ["derive"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

# Optimize dependencies in dev
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
