[package]
name = "jpre"
description = "A JDK management tool"
keywords = ["java", "jdk"]
categories = ["command-line-utilities", "development-tools::build-utils"]
version = "0.3.1-dev"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/java-preloader-reloadeder"
edition = "2021"

[dependencies]
error-stack = "0.6.0"
digest = "0.10.7"
sha2 = "0.10.9"
directories = "6.0.0"
tracing = "0.1.44"
toml = "0.9.11"
toml_edit = "0.24.0"
itertools = "0.14.0"
thiserror = "2.0.17"
console = "0.16.2"
indicatif = "0.18.3"
hex = "0.4.3"
tempfile = "3.24.0"
tar = "0.4.44"
flate2 = "1.1.8"
zip = "7.1.0"
enum_dispatch = "0.3.13"

[dependencies.url]
version = "2.5.8"
features = ["serde"]

[dependencies.ureq]
version = "3.1.4"
features = ["json"]

[dependencies.owo-colors]
version = "4.2.3"
features = ["supports-colors"]

[dependencies.derive_more]
version = "2.1.1"
features = ["full"]

[dependencies.clap]
version = "4.5.54"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tracing-subscriber]
# Force 0.3.19 because of https://github.com/tokio-rs/tracing/issues/3369
version = "=0.3.19"
features = ["env-filter"]

# Optimize dependencies in dev
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
